# spaceapi-rs

./: .gitignore  AUTHORS.md  Cargo.toml  README.md  config.sample.yml  flake.nix  result
.github/workflows/: ci.yml  rust-nix.yaml  rust.yaml
spaceapi-dezentrale/: Cargo.toml
spaceapi-dezentrale-client/: Cargo.toml
spaceapi-dezentrale-client/src/: lib.rs  main.rs
spaceapi-dezentrale-server/: Cargo.toml
spaceapi-dezentrale-server/src/: lib.rs  main.rs
spaceapi-dezentrale/src/: lib.rs
src/: status.rs
