[workspace]
members = [
    "spaceapi-dezentrale",
    "spaceapi-dezentrale-client",
    "spaceapi-dezentrale-server",
]

[workspace.package]
version = "0.9.0"
repository = "https://github.com/dezentrale/spaceapi-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Alexander Böhm <alexander.boehm@malbolge.net>",
]
keywords = ["spaceapi", "hackerspaces", "status", "api"]
categories = ["api-bindings"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "AUTHORS.md",
]

[workspace.dependencies]
clap = "4.1.6"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
spaceapi-dezentrale = { path = "spaceapi-dezentrale" }
spaceapi-dezentrale-server = { path = "spaceapi-dezentrale-server" }
spaceapi = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = { version = "1", features = ["macros"] }
